Scrap temporary navbar and implemented first step in final nav. This version has correct sizing of elements and proper functionality. It pushes content down on mobile devices.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,31 +1,15 @@
 @import 'bootstrap';
 
-nav.navbar {
-	border-radius: 0;
+.navbar-default {
 	background-color: white;
-	border-bottom: none;
-	height: 100px;
+	border: none;
 }
 
-.logo img {
+.logo_large img {
 	width: 150px;
 }
 
-.navbar-brand {
-	padding-top: 5px;
-	padding-left: 40px;
-}
-
-.nav {
-	border-bottom: none;
-}
-
-ul.nav-tabs {
-	margin-top: 48px;
-	float: right;
-}
-
-.nav-tabs  li  a:hover {
-	border-color: #eeeeee;
-	border-radius: 4px;
+.logo_small img {
+	width: 60px;
+	margin-top: -15px;
 }
